[WIP] label font face form

--- a/src/app/components/main-stats/main-stats.component.html
+++ b/src/app/components/main-stats/main-stats.component.html
@@ -19,9 +19,8 @@
       </a>
     </div>
 
-    <div class="col">
+<!--    <div class="col">-->
 
-      <!-- todo compare diff tool, then routerlink -->
       <!--    <a-->
       <!--      [routerLink]="['', { outlets: {primary: ['graph', dataService.networkSelected.id], sidebar: ['compare', dataService.networkSelected.id]} }]"-->
       <!--      class="btn btn-block btn-outline-secondary mt-2"-->
@@ -29,14 +28,14 @@
       <!--      role="button">-->
       <!--      <fa-icon [icon]="faExchangeAlt"></fa-icon>&nbsp;{{'MAIN_STATS_BTN_COMPARE' | translate}}-->
       <!--    </a>-->
-      <button
-        class="btn btn-block btn-outline-secondary mt-2 mb-2"
-        data-toggle="tooltip" ngbTooltip="{{'MAIN_STATS_TT_COMPARE' | translate}}" placement="bottom"
-        [disabled]="true">
-        <fa-icon [icon]="faExchangeAlt"></fa-icon>&nbsp;{{'MAIN_STATS_BTN_COMPARE' | translate}}
-      </button>
+<!--      <button-->
+<!--        class="btn btn-block btn-outline-secondary mt-2 mb-2"-->
+<!--        data-toggle="tooltip" ngbTooltip="{{'MAIN_STATS_TT_COMPARE' | translate}}" placement="bottom"-->
+<!--        [disabled]="true">-->
+<!--        <fa-icon [icon]="faExchangeAlt"></fa-icon>&nbsp;{{'MAIN_STATS_BTN_COMPARE' | translate}}-->
+<!--      </button>-->
 
-    </div>
+<!--    </div>-->
   </div>
 
   <div class="card">
