--- a/src/app/components/sidebar-image/sidebar-image.component.html
+++ b/src/app/components/sidebar-image/sidebar-image.component.html
@@ -14,7 +14,6 @@
     {{'SIDEBAR_IMAGE_TITLE' | translate}}
   </h5>
 
-
   <p>{{'SIDEBAR_IMAGE_GENERAL' | translate}}</p>
 
   <form>
@@ -45,16 +44,6 @@
           <small>{{'SIDEBAR_IMAGE_FULL_HINT' | translate}}</small>
         </div>
 
-        <!-- BG white vs transparent: only for PNG -->
-        <div class="form-check" *ngIf="selectedFileType === 'PNG'">
-          <input class="form-check-input" type="checkbox" value=""
-                 id="bgInput">
-          <label class="form-check-label" for="bgInput">
-            {{'SIDEBAR_IMAGE_BG' | translate}}
-          </label>
-          <small>{{'SIDEBAR_IMAGE_BG_HINT' | translate}}</small>
-        </div>
-
       </div>
 
       <div class="col-6">
@@ -67,10 +56,50 @@
           <a *ngFor="let option of fileTypeOptions" class="dropdown-item"
              (click)="selectImageType(option)">{{option}}</a>
         </div>
+
       </div>
 
     </div>
 
+    <div class="form-row mb-2">
+
+      <div class="col-6">
+        <!-- BG white vs transparent: only for PNG -->
+        <div class="form-check">
+          <input class="form-check-input"
+                 type="checkbox"
+                 value="optUseBg"
+                 id="bgUse"
+                 name="bgUse"
+                 [(ngModel)]="optUseBg">
+          <label class="form-check-label"
+                 for="bgUse">
+            {{'SIDEBAR_IMAGE_BG' | translate}}
+          </label>
+        </div>
+      </div>
+
+      <div class="col-2" *ngIf="optUseBg">
+        <button class="btn btn-outline-secondary" (click)="this.optBg = dataService.getBackgroundColor()">
+          <fa-icon [icon]="faRedo"></fa-icon>
+        </button>
+      </div>
+
+      <div [ngClass]="optUseBg ? 'col-4' : 'col-6'">
+
+        <input *ngIf="optUseBg"
+               [(ngModel)]="optBg"
+               type="color"
+               class="form-control form-control-color"
+               id="colorBg"
+               name="colorBg"
+               value="{{optBg}}">
+
+        <small *ngIf="selectedFileType !== 'PNG' && !optUseBg">{{'SIDEBAR_IMAGE_BG_HINT' | translate}}</small>
+        <small *ngIf="selectedFileType === 'PNG' && !optUseBg">{{'SIDEBAR_IMAGE_BG_PNG_HINT' | translate}}</small>
+      </div>
+
+    </div>
 
     <div class="row mb-2">
       <div class="col-6">
@@ -92,7 +121,7 @@
     </div>
   </form>
 
-  <button class="btn btn-lg btn-block btn-success" *ngIf="selectedFileType !== null"
+  <button class="btn btn-lg btn-block btn-success" *ngIf="selectedFileType"
           (click)="downloadImage()">
     {{'SIDEBAR_IMAGE_BTN_DOWNLOAD' | translate}}
   </button>
