[WIP] cosmetic fixes

--- a/src/app/components/main-info/main-info.component.html
+++ b/src/app/components/main-info/main-info.component.html
@@ -33,10 +33,10 @@
   </li>
 </ul>
 
-<hr>
+<!--<hr>-->
 
-<h3>{{'MAIN_INFO_DOCUMENTATION_TITLE' | translate}}</h3>
-<p [innerHTML]="'MAIN_INFO_DOCUMENTATION_DESCRIPTION' | translate"></p>
+<!--<h3>{{'MAIN_INFO_DOCUMENTATION_TITLE' | translate}}</h3>-->
+<!--<p [innerHTML]="'MAIN_INFO_DOCUMENTATION_DESCRIPTION' | translate"></p>-->
 
 <hr>
 
