--- a/src/app/components/sidebar-image/sidebar-image.component.html
+++ b/src/app/components/sidebar-image/sidebar-image.component.html
@@ -8,9 +8,8 @@
        type="button"
        ngbTooltip="{{'NAV_MANAGE' | translate}}" placement="right"
        role="button">
-      <fa-icon [icon]="faArrowLeft"></fa-icon>
+      <fa-icon class="mr-1" [icon]="faArrowLeft"></fa-icon>
     </a>
-
     {{'SIDEBAR_IMAGE_TITLE' | translate}}
   </h5>
 
